# AutomationAgent_Backend

./: .env.example  .vercelignore  AGENT1_IMPROVEMENTS.md  QUICK_START.md  RL_INTEGRATION_COMPLETE.md  SETUP_RL_SYSTEM.md  TESTING_GUIDE.md  VERCEL_FIX_SUMMARY.md  analytics_enhanced_agents.py  api_rl_endpoints.py  channel_analytics_tracker.py  deploy_vercel.bat  deploy_vercel.sh  main.py  pyproject.toml  readme.md  requirements.dev.txt  requirements.prod.txt  requirements.txt  rl_enhanced_example.py  rl_integration.py  test_all_agents_rl.py  test_cloud_connections.py  test_env_loading.py  test_imports.py  unified_analytics_agents.py  vercel.json  youtube_http_client.py  youtube_tools.py
Backend/: QUICKSTART.md  main.py
agents_ReinforcementLearning/: api_rl_endpoints.py  demo_results.json  main_orchestrator.py  memory_integration.py  rl_engine.py  rl_integration.py
all_youtube_tools/: youtube_direct_client.py  youtube_http_client.py  youtube_tools.py
api/: index.py
channel_auditor_agent_1/: youtubeAgent.py
per_channel_analytics_Agents/: analytics_enhanced_agents.py  channel_analytics_tracker.py  scriptToscene_agent.py  scriptwriter_agent.py  unified_analytics_agents.py
readme_files/: AGENT_MEMORY_ARCHITECTURE.md  ANALYTICS_AWARE_AGENTS.md  CHANNEL_ANALYTICS_GUIDE.md  CHATBOT_ONLY_SIMPLIFICATION.md  CHAT_HISTORY_DATABASE.md  CLEANUP_SUMMARY.md  DEPLOYMENT_QUICK_FIX.md  FILE_ORGANIZATION.md  GEMINI_CHATBOT_AGENTS.md  INTEGRATION_GUIDE.md  MONGODB_SSL_FIX.md  ORGANIZED_STRUCTURE.md  README.md  SCRIPT_TO_SCENE_DEPLOYMENT_FIX.md  SCRIPT_TO_SCENE_UNIFIED_AGENT.md  (+9 more)
(+33 files in other folders)
