[project]
name = "youtube-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.33.0",
    "openai-agents>=0.4.2",
    "python-dotenv>=1.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "aiohttp>=3.13.2",
    "redis>=4.0.0",
    "numpy>=1.21.0",
    "certifi>=2023.0.0",
    "dnspython>=2.0.0",
    "scipy>=1.7.0",
    "google-api-python-client>=2.80.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "aioredis>=2.0.0",
    "asyncio-mqtt>=0.11.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "loguru>=0.6.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
